--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="container">
         <div class="cloud"></div>
     </div>
-    <script src="the gang.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
